# Small-OS-in-Rust

./: .gitignore  Cargo.toml  Makefile  README.md  x86_64-rsos.json
arch/x86_64/: boot.asm  grub.cfg  link.ld  long_mode_init.asm  multiboot_header.asm
src/: interrupt.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/interrupt/: handler.rs  idt.rs  mod.rs  pic.rs
src/mm/: mod.rs
