[package]
name = "rsos"
version = "0.1.0"
authors = ["Xuhao Luo <rossihox@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
x86_64 = "0.8.2"
uart_16550 = "0.2.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[lib]
crate_type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
